--- a/website/apps/aplayer/templates/aplayer/tpl_screen.html
+++ b/website/apps/aplayer/templates/aplayer/tpl_screen.html
@@ -84,7 +84,7 @@
         <div class="span6">
             <ul class="horizontal unstyled">
 
-                <li>
+                <li class="prev">
                     <a href="#prev" title="Previous"> <i class="icon-step-backward"></i> </a>
                 </li>
 
@@ -95,7 +95,7 @@
                     <a href="#play" title="Play"> <i class="icon-play"></i> </a>
                 </li>
 
-                <li>
+                <li class="next">
                     <a href="#next" title="Next"> <i class="icon-step-forward"></i> </a>
                 </li>
 
