--- a/website/site-static/sass/aplayer/_style.sass
+++ b/website/site-static/sass/aplayer/_style.sass
@@ -294,6 +294,22 @@ body.popup
   
 
 
+// restyle in case playing from abcast
+body.abcast
+  .indicator.playhead
+    opacity: 0
+  .aplayer-controls
+    .next, .prev
+      display: none
+
+
+
+
+
+
+
+
+
 
 
 
