--- a/website/site-static/sass/element/_itemview.sass
+++ b/website/site-static/sass/element/_itemview.sass
@@ -94,6 +94,9 @@ section.comments.disqus
     
   &.description
     margin-top: 15px
+
+  &.tracklist
+    margin-top: 15px
     .markdown
       // +markdown()
     
