--- a/website/site-static/sass/element/_listview.sass
+++ b/website/site-static/sass/element/_listview.sass
@@ -494,6 +494,34 @@
           padding: 4px 2px 0px 2px
           vertical-align: middle
 
+    // special version with timestamps in c1
+    .item.timestamp .c1
+      width: 90px !important
+      .timestamp
+        width: 36px
+        float: left
+        font-weight: bold
+        padding: 2px 0 0 4px
+
+    .item.hidden-future
+      display: table-row
+      background: #efefef
+
+      .inner
+        display: table-cell
+        border-bottom: 1px solid #dddddd
+        height: 36px
+        &.icon
+          i
+            padding-left: 15px
+            font-size: 200%
+            line-height: 33px
+            color: #aaaaaa
+
+
+
+
+
 
 
 
