--- a/website/apps/aplayer/templates/aplayer/_common_script.html
+++ b/website/apps/aplayer/templates/aplayer/_common_script.html
@@ -1,4 +1,4 @@
-{% load sekizai_tags %}
+{% load sekizai_tags nunjucks_tags %}
 
 	<!-- load jquery from cdn, fallback if neccessary -->
 	{% addtoblock "js-head" %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>{% endaddtoblock %}
@@ -20,6 +20,10 @@
 
 	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/ba-debug.js"></script>{% endaddtoblock %}
 
+	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/nunjucks/nunjucks-dev.js"></script>{% endaddtoblock %}
+
+	{% addtoblock "js-post" %}{% nunjucks_scripts %}{% endaddtoblock %}
+    {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/nunjucks/filters.js"></script>{% endaddtoblock %}
   
   	<!-- js-post, rendered AFTER the default "js" block -->
   	{% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery.cookie.min.js"></script>{% endaddtoblock %}
