--- a/website/site-static/sass/util/_dialog.sass
+++ b/website/site-static/sass/util/_dialog.sass
@@ -17,7 +17,8 @@
   left: -28000px
   top: -28000px
   display: none
-  max-width: 280px
+  // max-width: 280px
+  max-width: 560px
   min-width: 200px
   min-height: 80px
   font-size: $baseFontSize
