--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -261,7 +261,7 @@
 
         base.ui.init();
 
-        aplayer.ui.init();
+        aplayer.ui.init(); // TODO: refactor
 
 
         base.ui.skeleton();
