--- a/website/apps/aplayer/templates/aplayer/_common_script.html
+++ b/website/apps/aplayer/templates/aplayer/_common_script.html
@@ -1,4 +1,4 @@
-{% load sekizai_tags nunjucks_tags %}
+{% load sekizai_tags nunjucks_tags pushy_tags %}
 
 	<!-- load jquery from cdn, fallback if neccessary -->
 	{% addtoblock "js-head" %}<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>{% endaddtoblock %}
@@ -7,6 +7,11 @@
 	<!-- js-head, rendered in head :) block -->
 	{% addtoblock "js-head" %}<script type="text/javascript" src="{{ STATIC_URL }}js/lib/jquery-ui-1.9.2.custom.min.js"></script>{% endaddtoblock %}
 
+    {% addtoblock "js-head" %}{% pushy_scripts %}{% endaddtoblock %}
+
+
+    {% addtoblock "js-post" %}<script src="{{ STATIC_URL }}abcast/js/lib/jquery.countdown.js"></script>{% endaddtoblock %}
+    {% addtoblock "js-post" %}<script type="text/javascript" src="{{ STATIC_URL }}fluent_comments/js/ajaxcomments.js"></script>{% endaddtoblock %}
 	
 	<!-- base css block -->
 	{% addtoblock "css" %}<link type="text/css" href="{{ STATIC_URL }}css/screen.css" rel="stylesheet" />{% endaddtoblock %}
