--- a/website/site-static/sass/aplayer/_style.sass
+++ b/website/site-static/sass/aplayer/_style.sass
@@ -39,6 +39,9 @@ html, body
 // main wrapper
 body.popup
 
+  .container
+    width: 100% !important
+
   .screen.controls
 
   // navbar override
@@ -165,7 +168,7 @@ body.popup
       height: 120px
       width: 120px
     
-  .screen.playlist
+  .screen.playlist, .screen.emission
     overflow-y: scroll
     overflow-x: hidden
     height: 562px
@@ -174,7 +177,9 @@ body.popup
     position: fixed
     
     padding-top: 24px
-    
+
+
+  .screen.playlist
     .item
       border-bottom: 1px solid #efefef
       &:first-child
@@ -231,7 +236,54 @@ body.popup
           .inner
             width: 0%
             background: #00bb00
-    
+
+
+  .screen.emission
+    padding-left: 10px
+    padding-right: 10px
+
+    section.description
+      p
+        color: #5a5a5a
+
+      .description
+        border-top: 1px #a5a5a5
+        border-bottom: 1px solid#a5a5a5
+        max-height: 260px
+        overflow: hidden
+
+
+      .markdown-remove
+        *
+          color: #5a5a5a
+          font-size: 12px
+          line-height: 13px
+          margin: 2px 0 !important
+          padding: 2px 0
+
+        h1, h2
+          font-size: 14px
+          line-height: 16px
+
+      .object-links
+        padding-top: 4px
+
+      a
+        //background: #6633cc
+        //color: white
+
+  .screen.comments
+    display: none
+    overflow-y: hidden
+    overflow-x: hidden
+    // height: 562px
+    width: 100%
+    top: 380px
+    position: relative
+
+    padding-top: 24px
+
+
       
       
   #progress_bar
@@ -294,8 +346,28 @@ body.popup
   
 
 
-// restyle in case playing from abcast
+////////////////////////////////////////////////////
+// styles depending on context
+////////////////////////////////////////////////////
+body
+
+  .container
+    section.playlist, section.emission
+      display: none
+
+
+body.alibrary
+
+  .container
+    section.playlist
+      display: block
+
 body.abcast
+
+  .container
+    section.emission
+      display: block
+
   .indicator.playhead
     opacity: 0
   .aplayer-controls
@@ -329,3 +401,44 @@ body.popup
             font-size: 11px
             color: #666
             text-transform: uppercase
+
+
+// overrides for comments
+body.popup section.comments.on-site
+
+  div.header
+    display: none
+    padding: 10px
+    h3
+      font-size: 14px
+
+  div.form
+    padding: 10px 10px 0
+    border-top: 1px solid #dddddd
+
+  div.listing.comment
+    overflow-y: scroll
+    height: 200px
+    .item
+      border: none !important
+      padding: 6px 0 2px 0 !important
+
+      &:nth-child(odd)
+        background: #fafafa
+
+      .col-left
+        max-width: 400px
+        .comment-text > p
+          padding-left: 10px
+
+      .col-right
+        clear: both
+        float: none
+        ul
+          margin: 0 0 0 0
+          padding: 4px 0 2px 10px
+          li
+            float: left
+            padding-right: 10px
+
+
